deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-ready-microservice
  labels:
    app: k8s-ready-microservice
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
      maxSurge: 1
  template:
    metadata:
      labels:
        app: k8s-ready-microservice
    spec:
      containers:
        - name: k8s-ready-microservice
          image: harbor-repo.vmware.com/tmcinterop/k8s-ready-microservice:0.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8000
          resources:
            limits:
              cpu: 10m
              memory: 30Mi
            requests:
              cpu: 10m
              memory: 30Mi
      terminationGracePeriodSeconds: 30
