service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-ready-microservice
  labels:
    app: k8s-ready-microservice
spec:
  type: NodePort
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      nodePort: 30007
  selector:
    app: k8s-ready-microservice
