ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/rewrite-target: /
  labels:
    app: k8s-ready-microservice
  name: k8s-ready-microservice
spec:
  backend:
    serviceName: k8s-ready-microservice
    servicePort: 80
  rules:
    - host: kubernetes.docker.internal
      http:
        paths:
          - path: /
            backend:
              serviceName: k8s-ready-microservice
              servicePort: 80
